--- a/css/style.css
+++ b/css/style.css
@@ -171,6 +171,7 @@ body {
   top: 5vh;
   left: 0;
   transform: translateX(-100%);
+  text-shadow: 3px 3px 3px #000;
 }
 .MusicPlayer ul li.on {
   z-index: 2;
@@ -276,6 +277,114 @@ body {
     width: 100%;
   }
 }
+.qa {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100%;
+}
+.qa .container {
+  width: 600px;
+  flex-direction: column;
+  position: absolute;
+  bottom: 50px;
+  left: -10%;
+}
+.qa .container h1 {
+  color: #333;
+}
+.qa .container .tab {
+  position: relative;
+  background-color: #fff;
+  margin-top: 20px;
+  padding: 0 20px 20px;
+  border-radius: 5px;
+  box-shadow: 0px 15px 25px rgba(0, 0, 0, 0.05);
+}
+.qa .container .tab:nth-of-type(1) label h2 {
+  background: linear-gradient(135deg, #c94949, #93a857);
+}
+.qa .container .tab:nth-of-type(2) label h2 {
+  background: linear-gradient(135deg, #dfa21f, #b8d46a);
+}
+.qa .container .tab:nth-of-type(3) label h2 {
+  background: linear-gradient(135deg, #6b64d1, #1b29e9);
+}
+.qa .container .tab:nth-of-type(4) label h2 {
+  background: linear-gradient(135deg, #8a1e50, #4d344e);
+}
+.qa .container .tab input[type=radio] {
+  appearance: none;
+}
+.qa .container .tab input[type=radio]:checked + label::after {
+  transform: rotate(135deg);
+  color: #000;
+}
+.qa .container .tab input[type=radio]:checked ~ .content {
+  max-height: 100vh;
+}
+.qa .container .tab input[type=radio]:checked ~ label h2 {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  justify-content: flex-end;
+  padding: 20px;
+  font-size: 100px;
+  transition: 0.2s;
+  color: rgba(255, 255, 255, 0.2);
+}
+.qa .container .tab input[type=radio]:checked ~ label h3 {
+  background-color: #fff;
+  padding: 2px 10px;
+  border-radius: 2px;
+  color: #333;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+}
+.qa .container .tab label {
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+}
+.qa .container .tab label h2 {
+  width: 40px;
+  height: 40px;
+  background-color: #333;
+  color: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
+  border-radius: 5px;
+  margin-right: 10px;
+}
+.qa .container .tab label h3 {
+  position: relative;
+  font-weight: 500;
+  color: #333;
+  z-index: 10;
+}
+.qa .container .tab label::after {
+  content: "+";
+  position: absolute;
+  right: 20px;
+  font-size: 32px;
+  transition: 1s;
+  color: rgba(0, 0, 0, 0.2);
+}
+.qa .container .tab .content {
+  max-height: 0;
+  transition: 1s;
+  overflow: hidden;
+}
+.qa .container .tab .content p {
+  padding: 10px 0;
+  position: relative;
+  z-index: 10;
+  color: #fff;
+}
+
 .wrapper {
   position: fixed;
   display: flex;
