--- a/scss/_MusicPlayer.scss
+++ b/scss/_MusicPlayer.scss
@@ -113,6 +113,7 @@
                     top: 5vh;
                     left: 0;
                     transform: translateX(-100%);
+                    text-shadow: 3px 3px 3px #000;
                 }
             }
 
